fix: Peças sumindo na animação em Fullscreen (Erro de Z-Index)

--- a/WebApp/style.css
+++ b/WebApp/style.css
@@ -187,7 +187,7 @@ select:focus {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 9999;
+    z-index: 900;
     background: var(--bg-gradient);
     align-items: center;
     padding: 2rem;
